@@ -47,6 +47,7 @@ Fixed rearranging windows and using total window height
 Fixed Next ULA Scroll to use registers 0x26 and 0x27
 Fixed Next tbblue port 123b behaviour: 48kb ram paging, shadow display, 3bit offset, read access
 Fixed cpu-step behaviour the first time it's executed
+Fixed cursor keys up/down on Jupiter Ace
 
 
 Some other minor bugfixes and improvements
